crates/bitnet-inference/tests/snapshots/snapshot_wave28__snapshot_generation_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave28.rs
expression: cfg
---
GenerationConfig {
    max_new_tokens: 512,
    temperature: 1.0,
    top_k: Some(
        50,
    ),
    top_p: Some(
        0.9,
    ),
    repetition_penalty: 1.1,
    do_sample: true,
    seed: None,
    eos_token_id: 2,
    pad_token_id: 0,
    min_length: 1,
    max_length: 2048,
}
