crates/bitnet-inference/tests/snapshots/snapshot_wave28__snapshot_sampling_config_custom_temperature.snap
---
source: crates/bitnet-inference/tests/snapshot_wave28.rs
expression: cfg
---
SamplingConfig {
    temperature: 0.42,
    top_k: Some(
        10,
    ),
    top_p: Some(
        0.85,
    ),
    repetition_penalty: 1.3,
    do_sample: true,
}
