crates/bitnet-inference/tests/snapshots/snapshot_wave28__snapshot_sampling_strategy_balanced.snap
---
source: crates/bitnet-inference/tests/snapshot_wave28.rs
expression: s
---
SamplingStrategy {
    config: SamplingConfig {
        temperature: 0.8,
        top_k: Some(
            50,
        ),
        top_p: Some(
            0.95,
        ),
        repetition_penalty: 1.1,
        do_sample: true,
    },
    repetition_history: [],
    current_repetition_penalty: 1.1,
}
