crates/bitnet-inference/tests/snapshots/snapshot_wave28__snapshot_sampling_strategy_conservative.snap
---
source: crates/bitnet-inference/tests/snapshot_wave28.rs
expression: s
---
SamplingStrategy {
    config: SamplingConfig {
        temperature: 0.3,
        top_k: Some(
            20,
        ),
        top_p: Some(
            0.8,
        ),
        repetition_penalty: 1.05,
        do_sample: true,
    },
    repetition_history: [],
    current_repetition_penalty: 1.05,
}
