crates/bitnet-inference/tests/snapshots/snapshot_wave28__snapshot_stop_reason_all_variants_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave28.rs
expression: variants
---
[
    MaxTokens,
    TimeLimit,
    MemoryLimit,
    EndOfSequence,
    UserStop,
]
